cant set endpoint in swagger generate
