# swagger/output.json
@@ -1,53 +1,135 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "Todo API",
-    "description": "My todo API",
+    "title": "KParser API",
+    "description": "Документация к АПИ парсер одного не безизвестного сайта",
     "version": "1.0.0"
   },
-  "host": "localhost:4000",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
-  "paths": {
-    "/token": {
-      "get": {
-        "description": "Get all todos",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "Array of all todos",
-            "schema": {
-              "$ref": "#/definitions/Todos"
-            }
-          }
-        }
-      }
-    }
-  },
+  "paths": {},
   "definitions": {
-    "Todo": {
+    "BigCity": {
       "type": "object",
       "properties": {
+        "name": {
+          "type": "string",
+          "example": "Алматы"
+        },
+        "alias": {
+          "type": "string",
+          "example": "Almaty"
+        },
         "id": {
-          "type": "string",
-          "example": "1"
-        },
-        "text": {
-          "type": "string",
-          "example": "test"
-        },
-        "done": {
-          "type": "boolean",
-          "example": false
+          "type": "number",
+          "example": 2
         }
       }
     },
-    "Todos": {
+    "BigCities": {
       "type": "array",
       "items": {
-        "$ref": "#/definitions/Todo"
+        "$ref": "#/definitions/BigCity"
+      }
+    },
+    "CityDistrict": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 3
+        },
+        "alias": {
+          "type": "string",
+          "example": "almaty-alatauskij"
+        },
+        "name": {
+          "type": "string",
+          "example": "Алатауский р-н"
+        },
+        "lat": {
+          "type": "number",
+          "example": 43.2813
+        },
+        "lon": {
+          "type": "number",
+          "example": 76.852
+        },
+        "zoom": {
+          "type": "number",
+          "example": 13
+        },
+        "hasChildren": {
+          "type": "boolean",
+          "example": true
+        },
+        "hasComplexes": {
+          "type": "boolean",
+          "example": false
+        },
+        "isBigCity": {
+          "type": "boolean",
+          "example": false
+        },
+        "type": {
+          "type": "string",
+          "example": "district"
+        },
+        "parentId": {
+          "type": "number",
+          "example": 2
+        },
+        "level": {
+          "type": "number",
+          "example": 3
+        }
+      }
+    },
+    "AllCityDistricts": {
+      "type": "object",
+      "properties": {
+        "result": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/CityDistrict"
+          }
+        },
+        "regionCount": {
+          "type": "number",
+          "example": 9
+        },
+        "parent": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "number",
+              "example": 2
+            },
+            "lon": {
+              "type": "number",
+              "example": 76.9129
+            },
+            "zoom": {
+              "type": "number",
+              "example": 11
+            },
+            "type": {
+              "type": "string",
+              "example": "city"
+            },
+            "hasComplexes": {
+              "type": "boolean",
+              "example": true
+            },
+            "isSelectable": {
+              "type": "boolean",
+              "example": true
+            }
+          }
+        }
       }
     },
     "Text": {
